--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,5 @@ tag = true
 push = true
 
 [tool.bumpver.file_patterns]
-"pyproject.toml" = [
-    'current_version = "{version}"',
-]
+"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
 "src/pgn2anki/__init__.py" = ["{version}"]
